--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Shibbir Ahmed",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --inline --hot --progress --port 3030"
+    "start": "gulp serve"
   },
   "dependencies": {
     "babel-core": "^6.18.2",
@@ -16,17 +16,27 @@
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "body-parser": "^1.15.2",
     "bootstrap": "4.0.0-alpha.5",
-    "css-loader": "^0.26.0",
+    "css-loader": "^0.26.1",
+    "express": "^4.14.0",
+    "express-hbs": "^1.0.3",
     "extract-text-webpack-plugin": "^1.0.1",
-    "html-webpack-plugin": "^2.24.1",
     "jquery": "^3.1.1",
+    "lodash": "^4.17.3",
+    "mongoose": "^4.7.5",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-router": "^3.0.0",
     "style-loader": "^0.13.1",
     "tether": "^1.3.7",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2",
-    "webpack-merge": "^0.18.0"
+    "webpack": "^1.14.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-load-plugins": "^1.4.0",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-util": "^3.0.8",
+    "run-sequence": "^1.2.2"
   }
 }
