--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Shibbir Ahmed",
   "license": "MIT",
   "scripts": {
-    "start": "gulp serve"
+    "start": "run-p webpack server",
+    "server": "cross-env NODE_ENV=development gulp nodemon",
+    "webpack": "cross-env NODE_ENV=development webpack --watch --progress"
   },
   "dependencies": {
     "babel-core": "^6.18.2",
@@ -18,6 +20,7 @@
     "babel-preset-react": "^6.16.0",
     "body-parser": "^1.15.2",
     "bootstrap": "4.0.0-alpha.5",
+    "cross-env": "^3.1.3",
     "css-loader": "^0.26.1",
     "express": "^4.14.0",
     "express-hbs": "^1.0.3",
@@ -25,18 +28,18 @@
     "jquery": "^3.1.1",
     "lodash": "^4.17.3",
     "mongoose": "^4.7.5",
+    "npm-run-all": "^3.1.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
     "style-loader": "^0.13.1",
     "tether": "^1.3.7",
-    "webpack": "^1.14.0"
+    "webpack": "^1.14.0",
+    "webpack-merge": "^2.0.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-load-plugins": "^1.4.0",
-    "gulp-nodemon": "^2.2.1",
-    "gulp-util": "^3.0.8",
-    "run-sequence": "^1.2.2"
+    "gulp-nodemon": "^2.2.1"
   }
 }
