--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.2",
     "bootstrap": "4.0.0-alpha.5",
     "cross-env": "^3.1.3",
@@ -26,9 +27,13 @@
     "express-hbs": "^1.0.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "jquery": "^3.1.1",
+    "jsonwebtoken": "^7.2.1",
     "lodash": "^4.17.3",
     "mongoose": "^4.7.5",
     "npm-run-all": "^3.1.2",
+    "passport": "^0.3.2",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
