--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "babel-preset-react": "^6.16.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.2",
-    "bootstrap": "4.0.0-alpha.5",
+    "bootstrap": "4.0.0-alpha.6",
     "cross-env": "^3.1.3",
     "css-loader": "^0.26.1",
     "express": "^4.14.0",
     "express-hbs": "^1.0.3",
     "extract-text-webpack-plugin": "^1.0.1",
+    "flux": "^3.1.2",
     "jquery": "^3.1.1",
     "jsonwebtoken": "^7.2.1",
     "lodash": "^4.17.3",
@@ -34,11 +35,11 @@
     "passport": "^0.3.2",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-router": "^3.0.0",
     "style-loader": "^0.13.1",
-    "tether": "^1.3.7",
+    "tether": "^1.4.0",
     "webpack": "^1.14.0",
     "webpack-merge": "^2.0.0"
   },
