--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "webpack": "cross-env NODE_ENV=development webpack --watch --progress"
   },
   "dependencies": {
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.8",
+    "async": "^2.1.4",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.19.0",
@@ -21,27 +22,27 @@
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.2",
     "bootstrap": "4.0.0-alpha.6",
-    "cross-env": "^3.1.3",
+    "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "express": "^4.14.0",
-    "express-hbs": "^1.0.3",
+    "express-hbs": "^1.0.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "flux": "^3.1.2",
     "jquery": "^3.1.1",
     "jsonwebtoken": "^7.2.1",
-    "lodash": "^4.17.3",
-    "mongoose": "^4.7.5",
+    "lodash": "^4.17.4",
+    "mongoose": "^4.7.7",
     "npm-run-all": "^3.1.2",
     "passport": "^0.3.2",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.0",
+    "react-router": "^3.0.1",
     "style-loader": "^0.13.1",
     "tether": "^1.4.0",
     "webpack": "^1.14.0",
-    "webpack-merge": "^2.0.0"
+    "webpack-merge": "^2.4.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
