--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.22.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.2",
     "bootstrap": "4.0.0-alpha.6",
@@ -32,6 +33,7 @@
     "jsonwebtoken": "^7.2.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.7.7",
+    "multer": "^1.2.1",
     "npm-run-all": "^3.1.2",
     "passport": "^0.3.2",
     "passport-http-bearer": "^1.0.1",
