--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   },
   "dependencies": {
     "async": "^2.1.4",
-    "babel-core": "^6.21.0",
+    "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-react-html-attrs": "^2.0.0",
-    "babel-plugin-transform-class-properties": "^6.19.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
+    "babel-plugin-transform-class-properties": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "bcrypt-nodejs": "^0.0.3",
-    "body-parser": "^1.15.2",
+    "body-parser": "^1.16.0",
     "bootstrap": "4.0.0-alpha.6",
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
@@ -32,19 +32,20 @@
     "jquery": "^3.1.1",
     "jsonwebtoken": "^7.2.1",
     "lodash": "^4.17.4",
-    "mongoose": "^4.7.7",
-    "multer": "^1.2.1",
+    "moment": "^2.17.1",
+    "mongoose": "^4.7.8",
+    "multer": "^1.3.0",
     "npm-run-all": "^3.1.2",
     "passport": "^0.3.2",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.1",
+    "react-router": "^3.0.2",
     "style-loader": "^0.13.1",
     "tether": "^1.4.0",
     "webpack": "^1.14.0",
-    "webpack-merge": "^2.4.0"
+    "webpack-merge": "^2.5.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
