--- a/package.json
+++ b/package.json
@@ -41,7 +41,12 @@
     "passport-local": "^1.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
+    "redux-promise-middleware": "^4.2.0",
+    "redux-thunk": "^2.2.0",
     "style-loader": "^0.13.1",
     "tether": "^1.4.0",
     "webpack": "^1.14.0",
