--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "express": "^4.14.0",
     "express-hbs": "^1.0.4",
     "extract-text-webpack-plugin": "^1.0.1",
-    "flux": "^3.1.2",
     "jquery": "^3.1.1",
     "jsonwebtoken": "^7.2.1",
     "lodash": "^4.17.4",
@@ -44,6 +43,7 @@
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
+    "redux-form": "^6.5.0",
     "redux-logger": "^2.7.4",
     "redux-promise-middleware": "^4.2.0",
     "redux-thunk": "^2.2.0",
