--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "express": "^4.14.0",
     "express-hbs": "^1.0.4",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.10.1",
+    "highcharts": "^5.0.7",
     "jquery": "^3.1.1",
     "jsonwebtoken": "^7.2.1",
     "lodash": "^4.17.4",
