--- a/package.json
+++ b/package.json
@@ -7,60 +7,61 @@
   "scripts": {
     "start": "run-p webpack server",
     "server": "cross-env NODE_ENV=development gulp nodemon",
-    "webpack": "cross-env NODE_ENV=development webpack --watch --progress"
+    "webpack": "cross-env NODE_ENV=development webpack --watch --progress",
+    "webpack:prod": "cross-env NODE_ENV=production webpack --watch --progress"
   },
   "dependencies": {
-    "async": "^2.1.4",
+    "async": "^2.1.5",
     "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
+    "babel-loader": "^6.4.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-react-html-attrs": "^2.0.0",
-    "babel-plugin-transform-class-properties": "^6.22.0",
+    "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "bcrypt-nodejs": "^0.0.3",
-    "body-parser": "^1.16.0",
+    "body-parser": "^1.17.1",
     "bootstrap": "4.0.0-alpha.6",
-    "cloudinary": "^1.7.0",
-    "cross-env": "^3.1.4",
-    "css-loader": "^0.26.1",
+    "cloudinary": "^1.8.0",
+    "cross-env": "^3.2.3",
+    "css-loader": "^0.27.1",
     "draft-js": "^0.10.0",
     "draft-js-export-html": "^0.5.2",
-    "express": "^4.14.0",
+    "express": "^4.15.2",
     "express-hbs": "^1.0.4",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
-    "highcharts": "^5.0.7",
+    "highcharts": "^5.0.9",
     "jquery": "^3.1.1",
-    "jsonwebtoken": "^7.2.1",
+    "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
-    "mongoose": "^4.7.8",
+    "mongoose": "^4.8.6",
     "multer": "^1.3.0",
-    "npm-run-all": "^3.1.2",
+    "npm-run-all": "^4.0.2",
     "passport": "^0.3.2",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-intl": "^2.2.3",
-    "react-redux": "^5.0.2",
-    "react-router": "^3.0.2",
+    "react-redux": "^5.0.3",
+    "react-router": "3.0.2",
     "redux": "^3.6.0",
     "redux-form": "^6.5.0",
-    "redux-logger": "^2.7.4",
+    "redux-logger": "^2.8.2",
     "redux-promise-middleware": "^4.2.0",
     "redux-thunk": "^2.2.0",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.13.2",
     "tether": "^1.4.0",
-    "validator": "^6.2.1",
-    "webpack": "^1.14.0",
-    "webpack-merge": "^2.5.0"
+    "validator": "^7.0.0",
+    "webpack": "^2.2.1",
+    "webpack-merge": "^4.0.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-load-plugins": "^1.4.0",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-nodemon": "^2.2.1"
   }
 }
