--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "multer": "^1.3.0",
     "npm-run-all": "^4.0.2",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "react": "^15.4.2",
@@ -53,6 +54,8 @@
     "redux-logger": "^2.8.2",
     "redux-promise-middleware": "^4.2.0",
     "redux-thunk": "^2.2.0",
+    "semantic-ui-css": "^2.2.9",
+    "semantic-ui-react": "^0.67.0",
     "style-loader": "^0.13.2",
     "tether": "^1.4.0",
     "validator": "^7.0.0",
