--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "async": "^2.1.5",
+    "axios": "^0.15.3",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.4.0",
     "babel-plugin-add-module-exports": "^0.2.1",
@@ -38,6 +39,7 @@
     "moment": "^2.17.1",
     "mongoose": "^4.8.6",
     "multer": "^1.3.0",
+    "noty": "^2.4.1",
     "npm-run-all": "^4.0.2",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
