Enable google oauth2

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "npm-run-all": "^4.0.2",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
+    "passport-google-oauth20": "^1.0.0",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "react": "^15.4.2",
