--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "license": "MIT",
   "scripts": {
     "start": "run-p webpack server",
+    "production": "webpack:prod && server:prod",
     "server": "cross-env NODE_ENV=development gulp nodemon",
-    "webpack": "cross-env NODE_ENV=development webpack --watch --progress",
-    "webpack:prod": "cross-env NODE_ENV=production webpack --watch --progress"
+    "webpack": "cross-env NODE_ENV=development webpack --watch --colors --progress",
+    "server:prod": "cross-env NODE_ENV=production gulp nodemon",
+    "webpack:prod": "cross-env NODE_ENV=production webpack --colors --progress"
+  },
+  "engines": {
+    "node": "6.10.0"
   },
   "dependencies": {
     "async": "^2.1.5",
@@ -23,6 +28,7 @@
     "babel-preset-stage-0": "^6.22.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.17.1",
+    "clean-webpack-plugin": "^0.1.16",
     "cloudinary": "^1.8.0",
     "cross-env": "^3.2.3",
     "css-loader": "^0.27.1",
@@ -33,13 +39,11 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "highcharts": "^5.0.9",
-    "jquery": "^3.1.1",
     "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "mongoose": "^4.8.6",
     "multer": "^1.3.0",
-    "noty": "^2.4.1",
     "npm-run-all": "^4.0.2",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
@@ -59,6 +63,7 @@
     "semantic-ui-css": "^2.2.9",
     "semantic-ui-react": "^0.67.0",
     "style-loader": "^0.15.0",
+    "toastr": "^2.1.2",
     "validator": "^7.0.0",
     "webpack": "^2.2.1",
     "webpack-merge": "^4.0.0"
