Optimize webpack bundle

--- a/package.json
+++ b/package.json
@@ -20,16 +20,14 @@
     "axios": "^0.15.3",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.4.0",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-react-html-attrs": "^2.0.0",
-    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.22.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.17.1",
     "clean-webpack-plugin": "^0.1.16",
     "cloudinary": "^1.8.0",
+    "compression": "^1.6.2",
     "css-loader": "^0.27.1",
     "draft-js": "^0.10.0",
     "draft-js-export-html": "^0.5.2",
