--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: node_js
 node_js:
-  - "5"
+  - "6"
   - "node"
 
 sudo: false
 
 branches:
   only: master
+
+after_script:
+  - istanbul cover node_modules/mocha/bin/_mocha server/tests/**/*.spec.js -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
