--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "scripts": {
     "start": "gulp",
-    "test": "cross-env NODE_ENV=test mocha server/tests/**/*.spec.js --reporter spec --timeout 3000",
-    "coverage": "cross-env NODE_ENV=test istanbul cover node_modules/mocha/bin/_mocha server/tests/**/*.spec.js -- -R spec",
+    "test": "gulp test",
+    "coverage": "istanbul cover node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=jasmine.json",
     "npm-run-all": "run-p webpack:watch serve:development",
     "serve:development": "gulp serve:development",
     "serve:production": "gulp serve:production",
@@ -76,10 +76,11 @@
   },
   "devDependencies": {
     "coveralls": "^2.13.0",
-    "cross-env": "^4.0.0",
     "faker": "^4.1.0",
+    "gulp-jasmine": "^2.4.2",
     "istanbul": "^0.4.5",
-    "mocha": "^3.2.0",
+    "jasmine": "^2.5.3",
+    "jasmine-spec-reporter": "^3.2.0",
     "supertest": "^3.0.0"
   }
 }
