Fix travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,5 @@ branches:
   only: master
 
 after_script:
-  - istanbul cover node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=jasmine.json && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+  - npm run coverage
+  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
