--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "start": "gulp",
+    "production": "gulp production",
     "test": "gulp test",
     "coverage": "gulp test:coverage",
     "istanbul": "istanbul cover node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=jasmine.json",
@@ -13,20 +14,19 @@
     "nodemon:watch": "gulp nodemon:watch",
     "serve:production": "gulp serve:production",
     "webpack": "webpack --colors --progress",
-    "webpack:watch": "npm run webpack -- --watch",
-    "production": "gulp production"
+    "webpack:watch": "npm run webpack -- --watch"
   },
   "engines": {
     "node": "7.7.0"
   },
   "dependencies": {
-    "async": "^2.1.5",
-    "axios": "^0.16.0",
-    "babel-core": "^6.22.1",
+    "async": "^2.3.0",
+    "axios": "^0.16.1",
+    "babel-core": "^6.24.1",
     "babel-loader": "^6.4.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.17.1",
     "clean-webpack-plugin": "^0.1.16",
@@ -43,35 +43,35 @@
     "gulp-load-plugins": "^1.5.0",
     "gulp-nodemon": "^2.2.1",
     "gulp-shell": "^0.6.3",
-    "highcharts": "^5.0.9",
+    "highcharts": "^5.0.10",
     "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
-    "moment": "^2.17.1",
-    "mongoose": "^4.8.6",
+    "moment": "^2.18.1",
+    "mongoose": "^4.9.4",
     "multer": "^1.3.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
-    "react": "^15.4.2",
+    "react": "^15.5.3",
     "react-dom": "^15.4.2",
     "react-intl": "^2.2.3",
-    "react-redux": "^5.0.3",
+    "react-redux": "^5.0.4",
     "react-router": "3.0.3",
     "redux": "^3.6.0",
-    "redux-form": "^6.5.0",
-    "redux-logger": "^3.0.0",
+    "redux-form": "^6.6.2",
+    "redux-logger": "^3.0.1",
     "redux-promise-middleware": "^4.2.0",
     "redux-thunk": "^2.2.0",
     "run-sequence": "^1.2.2",
-    "semantic-ui-css": "^2.2.9",
-    "semantic-ui-react": "^0.67.0",
+    "semantic-ui-css": "^2.2.10",
+    "semantic-ui-react": "^0.67.2",
     "style-loader": "^0.16.1",
     "toastr": "^2.1.2",
     "validator": "^7.0.0",
-    "webpack": "^2.2.1",
-    "webpack-merge": "^4.0.0"
+    "webpack": "^2.3.3",
+    "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
     "coveralls": "^2.13.0",
