--- a/package.json
+++ b/package.json
@@ -8,16 +8,13 @@
     "start": "gulp",
     "production": "gulp production",
     "test": "gulp test",
-    "coverage": "gulp test:coverage",
+    "coverage": "gulp coverage",
     "istanbul": "istanbul cover node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=jasmine.json",
     "run-all:watch": "run-p webpack:watch nodemon:watch",
     "nodemon:watch": "gulp nodemon:watch",
     "serve:production": "gulp serve:production",
     "webpack": "webpack --colors --progress",
     "webpack:watch": "npm run webpack -- --watch"
-  },
-  "engines": {
-    "node": "7.7.0"
   },
   "dependencies": {
     "async": "^2.4.1",
@@ -33,30 +30,30 @@
     "cloudinary": "^1.9.0",
     "compression": "^1.6.2",
     "css-loader": "^0.28.4",
-    "draft-js": "^0.10.0",
-    "draft-js-export-html": "^0.5.4",
+    "dotenv": "^6.2.0",
+    "draft-js": "^0.10.2",
+    "draft-js-export-html": "^1.2.0",
     "express": "^4.15.3",
     "express-hbs": "^1.0.4",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "gulp": "^3.9.1",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-nodemon": "^2.2.1",
     "gulp-shell": "^0.6.3",
     "highcharts": "^5.0.12",
     "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
-    "mongoose": "^4.10.4",
+    "mongoose": "^5.4.6",
     "multer": "^1.3.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-intl": "^2.3.0",
+    "react": "16.0.0",
+    "react-dom": "16.0.0",
+    "react-intl": "^2.4.0",
     "react-redux": "^5.0.5",
     "react-router": "3.0.5",
     "redux": "^3.6.0",
@@ -77,6 +74,7 @@
     "coveralls": "^2.13.1",
     "faker": "^4.1.0",
     "gulp-jasmine": "^2.4.2",
+    "gulp-nodemon": "^2.4.2",
     "istanbul": "^0.4.5",
     "jasmine": "^2.6.0",
     "jasmine-spec-reporter": "^4.1.0",
