--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gadget-catalog",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A react application for cataloging gadgets",
   "author": "Shibbir Ahmed",
   "license": "MIT",
@@ -8,51 +8,45 @@
     "start": "gulp",
     "production": "gulp production",
     "test": "gulp test",
-    "coverage": "gulp coverage",
-    "istanbul": "istanbul cover node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=jasmine.json",
-    "run-all:watch": "run-p webpack:watch nodemon:watch",
-    "nodemon:watch": "gulp nodemon:watch",
-    "serve:production": "gulp serve:production",
-    "webpack": "webpack --colors --progress",
-    "webpack:watch": "npm run webpack -- --watch"
+    "coverage": "istanbul cover node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=jasmine.json",
+    "webpack": "webpack --watch --progress --config=app/config/webpack.development"
   },
   "dependencies": {
-    "async": "^2.4.1",
-    "axios": "^0.16.1",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "async": "^2.6.1",
+    "axios": "^0.18.0",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-react-html-attrs": "^2.1.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.17.2",
-    "clean-webpack-plugin": "^0.1.16",
+    "clean-webpack-plugin": "^1.0.1",
     "cloudinary": "^1.9.0",
     "compression": "^1.6.2",
-    "css-loader": "^0.28.4",
+    "css-loader": "^2.1.0",
     "dotenv": "^6.2.0",
     "draft-js": "^0.10.2",
     "draft-js-export-html": "^1.2.0",
     "express": "^4.15.3",
     "express-hbs": "^1.0.4",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
-    "gulp": "^3.9.1",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-shell": "^0.6.3",
+    "file-loader": "^3.0.1",
     "highcharts": "^5.0.12",
     "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
+    "mini-css-extract-plugin": "^0.5.0",
     "moment": "^2.18.1",
     "mongoose": "^5.4.6",
     "multer": "^1.3.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
-    "react": "16.0.0",
-    "react-dom": "16.0.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-intl": "^2.4.0",
     "react-redux": "^5.0.5",
     "react-router": "3.0.5",
@@ -61,24 +55,25 @@
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^4.3.0",
     "redux-thunk": "^2.2.0",
-    "run-sequence": "^1.2.2",
-    "semantic-ui-css": "^2.2.10",
-    "semantic-ui-react": "^0.68.4",
-    "style-loader": "^0.18.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.84.0",
     "toastr": "^2.1.2",
-    "validator": "^7.0.0",
-    "webpack": "^2.6.1",
-    "webpack-merge": "^4.1.0"
+    "uglifyjs-webpack-plugin": "^2.1.1",
+    "validator": "^10.11.0",
+    "webpack": "^4.29.0",
+    "webpack-merge": "^4.2.1",
+    "webpack-stream": "^5.2.1"
   },
   "devDependencies": {
-    "coveralls": "^2.13.1",
+    "coveralls": "^3.0.2",
     "faker": "^4.1.0",
-    "gulp-jasmine": "^2.4.2",
+    "gulp": "^4.0.0",
+    "gulp-jasmine": "^4.0.0",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-nodemon": "^2.4.2",
     "istanbul": "^0.4.5",
-    "jasmine": "^2.6.0",
-    "jasmine-spec-reporter": "^4.1.0",
-    "npm-run-all": "^4.0.2",
-    "supertest": "^3.0.0"
+    "jasmine-spec-reporter": "^4.2.1",
+    "supertest": "^3.4.2",
+    "webpack-cli": "^3.2.1"
   }
 }
