--- a/package.json
+++ b/package.json
@@ -21,24 +21,24 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-react-html-attrs": "^2.1.0",
     "bcrypt-nodejs": "^0.0.3",
-    "body-parser": "^1.17.2",
+    "body-parser": "^1.18.3",
     "clean-webpack-plugin": "^1.0.1",
     "cloudinary": "^1.9.0",
-    "compression": "^1.6.2",
+    "compression": "^1.7.3",
     "css-loader": "^2.1.0",
     "dotenv": "^6.2.0",
     "draft-js": "^0.10.2",
     "draft-js-export-html": "^1.2.0",
-    "express": "^4.15.3",
-    "express-hbs": "^1.0.4",
+    "express": "^4.16.4",
+    "express-hbs": "^2.0.1",
     "file-loader": "^3.0.1",
     "highcharts": "^5.0.12",
     "jsonwebtoken": "^7.4.1",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.11",
     "mini-css-extract-plugin": "^0.5.0",
-    "moment": "^2.18.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.6",
-    "multer": "^1.3.0",
+    "multer": "^1.4.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
@@ -47,17 +47,17 @@
     "passport-local": "^1.0.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-intl": "^2.4.0",
+    "react-intl": "^2.8.0",
     "react-redux": "^5.0.5",
     "react-router": "3.0.5",
     "redux": "^3.6.0",
-    "redux-form": "^6.7.0",
+    "redux-form": "6.7.0",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^4.3.0",
-    "redux-thunk": "^2.2.0",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.84.0",
-    "toastr": "^2.1.2",
+    "toastr": "^2.1.4",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "validator": "^10.11.0",
     "webpack": "^4.29.0",
