Store access token in cookie instead of localstorage

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clean-webpack-plugin": "^1.0.1",
     "cloudinary": "^1.9.0",
     "compression": "^1.7.3",
+    "cookie-parser": "^1.4.3",
     "css-loader": "^2.1.0",
     "dotenv": "^6.2.0",
     "draft-js": "^0.10.2",
@@ -33,22 +34,22 @@
     "express-hbs": "^2.0.1",
     "file-loader": "^3.0.1",
     "highcharts": "^5.0.12",
-    "jsonwebtoken": "^7.4.1",
+    "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "mini-css-extract-plugin": "^0.5.0",
     "moment": "^2.24.0",
     "mongoose": "^5.4.6",
     "multer": "^1.4.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "passport": "^0.3.2",
-    "passport-facebook": "^2.1.1",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^1.0.0",
-    "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-intl": "^2.8.0",
-    "react-redux": "^5.0.5",
+    "react-redux": "5.0.5",
     "react-router": "3.0.5",
     "redux": "^3.6.0",
     "redux-form": "6.7.0",
