--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clean-webpack-plugin": "^1.0.1",
     "cloudinary": "^1.13.2",
     "compression": "^1.7.3",
+    "connected-react-router": "^6.2.2",
     "cookie-parser": "^1.4.3",
     "css-loader": "^2.1.0",
     "dotenv": "^6.2.0",
@@ -33,6 +34,7 @@
     "express": "^4.16.4",
     "express-hbs": "^2.0.1",
     "file-loader": "^3.0.1",
+    "formik": "^1.4.3",
     "highcharts": "^7.0.2",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
@@ -46,13 +48,13 @@
     "passport-google-oauth20": "^1.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "query-string": "^6.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-intl": "^2.8.0",
     "react-redux": "5.0.5",
-    "react-router": "3.0.5",
-    "redux": "^3.6.0",
-    "redux-form": "6.7.0",
+    "react-router-dom": "^4.3.1",
+    "redux": "3.6.0",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^4.3.0",
     "redux-thunk": "^2.3.0",
