--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "clean-webpack-plugin": "^1.0.1",
     "cloudinary": "^1.13.2",
     "compression": "^1.7.3",
-    "connected-react-router": "^6.2.2",
     "cookie-parser": "^1.4.3",
     "css-loader": "^2.1.0",
     "dotenv": "^6.2.0",
@@ -34,13 +33,13 @@
     "express": "^4.16.4",
     "express-hbs": "^2.0.1",
     "file-loader": "^3.0.1",
-    "formik": "^1.4.3",
-    "highcharts": "^7.0.2",
+    "formik": "^1.5.0",
+    "highcharts": "^7.0.3",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "mini-css-extract-plugin": "^0.5.0",
     "moment": "^2.24.0",
-    "mongoose": "^5.4.6",
+    "mongoose": "^5.4.11",
     "multer": "^1.4.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "passport": "^0.4.0",
@@ -49,21 +48,21 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "query-string": "^6.2.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "react-intl": "^2.8.0",
-    "react-redux": "5.0.5",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "redux": "3.6.0",
+    "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-promise-middleware": "^4.3.0",
+    "redux-promise-middleware": "^6.0.1",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.84.0",
+    "semantic-ui-react": "^0.85.0",
     "toastr": "^2.1.4",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "validator": "^10.11.0",
-    "webpack": "^4.29.0",
+    "webpack": "^4.29.3",
     "webpack-merge": "^4.2.1",
     "webpack-stream": "^5.2.1",
     "yup": "^0.26.10"
@@ -78,6 +77,6 @@
     "istanbul": "^0.4.5",
     "jasmine-spec-reporter": "^4.2.1",
     "supertest": "^3.4.2",
-    "webpack-cli": "^3.2.1"
+    "webpack-cli": "^3.2.3"
   }
 }
