Add memory-cache for storing admin

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "clean-webpack-plugin": "^1.0.1",
     "cloudinary": "^1.13.2",
     "compression": "^1.7.3",
-    "cookie-parser": "^1.4.3",
+    "cookie-parser": "^1.4.4",
     "css-loader": "^2.1.0",
     "dotenv": "^6.2.0",
     "draft-js": "^0.10.5",
@@ -37,9 +37,10 @@
     "highcharts": "^7.0.3",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
+    "memory-cache": "^0.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "moment": "^2.24.0",
-    "mongoose": "^5.4.11",
+    "mongoose": "^5.4.13",
     "multer": "^1.4.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "passport": "^0.4.0",
@@ -48,8 +49,8 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "query-string": "^6.2.0",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
     "react-intl": "^2.8.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
@@ -62,7 +63,7 @@
     "toastr": "^2.1.4",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "validator": "^10.11.0",
-    "webpack": "^4.29.3",
+    "webpack": "^4.29.4",
     "webpack-merge": "^4.2.1",
     "webpack-stream": "^5.2.1",
     "yup": "^0.26.10"
