--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "author": "Shibbir Ahmed",
   "license": "MIT",
   "engines": {
-    "node": "10.15.1"
+    "node": ">=10.15.1"
   },
   "scripts": {
     "start": "gulp",
     "production": "gulp production",
     "test": "gulp test",
     "coverage": "istanbul cover node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=jasmine.json",
-    "webpack": "webpack --watch --progress --config=app/config/webpack.development"
+    "webpack": "webpack --progress --watch --display-error-details --config=app/config/webpack.development"
   },
   "dependencies": {
     "async": "^2.6.2",
@@ -77,7 +77,7 @@
     "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "supertest": "^3.4.2",
-    "uglifyjs-webpack-plugin": "^2.1.1",
+    "terser-webpack-plugin": "^1.2.2",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
     "webpack-merge": "^4.2.1",
