--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.16.4",
     "express-hbs": "^2.0.2",
     "formik": "^1.5.1",
+    "glob": "^7.1.3",
     "highcharts": "^7.0.3",
     "jsonwebtoken": "^8.5.0",
     "lodash": "^4.17.11",
