--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "cloudinary": "^1.13.2",
     "compression": "^1.7.3",
     "cookie-parser": "^1.4.4",
+    "dotenv": "^6.2.0",
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.3.0",
     "express": "^4.16.4",
     "express-hbs": "^2.0.2",
     "formik": "^1.5.1",
+    "glob": "^7.1.3",
     "highcharts": "^7.0.3",
     "jsonwebtoken": "^8.5.0",
     "lodash": "^4.17.11",
@@ -65,7 +67,6 @@
     "clean-webpack-plugin": "^1.0.1",
     "coveralls": "^3.0.2",
     "css-loader": "^2.1.0",
-    "dotenv": "^6.2.0",
     "faker": "^4.1.0",
     "file-loader": "^3.0.1",
     "gulp": "^4.0.0",
