--- a/package.json
+++ b/package.json
@@ -24,28 +24,29 @@
     "cookie-parser": "^1.4.4",
     "dotenv": "^6.2.0",
     "draft-js": "^0.10.5",
-    "draft-js-export-html": "^1.3.0",
+    "draft-js-export-html": "^1.3.3",
     "express": "^4.16.4",
     "express-hbs": "^2.0.2",
     "formik": "^1.5.1",
     "glob": "^7.1.3",
     "highcharts": "^7.0.3",
+    "izitoast": "^1.4.0",
     "jsonwebtoken": "^8.5.0",
     "lodash": "^4.17.11",
     "memory-cache": "^0.2.0",
     "moment": "^2.24.0",
-    "mongoose": "^5.4.13",
+    "mongoose": "^5.4.18",
     "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^1.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "query-string": "^6.2.0",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-intl": "^2.8.0",
-    "react-redux": "^6.0.0",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
@@ -53,22 +54,20 @@
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
-    "toastr": "^2.1.4",
     "validator": "^10.11.0",
     "yup": "^0.26.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-react-html-attrs": "^2.1.0",
-    "clean-webpack-plugin": "^1.0.1",
-    "coveralls": "^3.0.2",
-    "css-loader": "^2.1.0",
+    "clean-webpack-plugin": "^2.0.0",
+    "coveralls": "^3.0.3",
+    "css-loader": "^2.1.1",
     "faker": "^4.1.0",
-    "file-loader": "^3.0.1",
     "gulp": "^4.0.0",
     "gulp-jasmine": "^4.0.0",
     "gulp-load-plugins": "^1.5.0",
@@ -77,9 +76,10 @@
     "jasmine-spec-reporter": "^4.2.1",
     "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "supertest": "^3.4.2",
-    "terser-webpack-plugin": "^1.2.2",
-    "webpack": "^4.29.5",
+    "supertest": "^4.0.0",
+    "terser-webpack-plugin": "^1.2.3",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-merge": "^4.2.1",
     "webpack-stream": "^5.2.1"
