--- a/package.json
+++ b/package.json
@@ -15,73 +15,74 @@
     "webpack": "webpack --progress --watch --display-error-details --config=app/config/webpack.development"
   },
   "dependencies": {
-    "async": "^3.0.1",
+    "async": "^3.1.0",
     "axios": "^0.19.0",
-    "bcrypt-nodejs": "^0.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "cloudinary": "^1.14.0",
+    "cloudinary": "^1.15.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
-    "dotenv": "^8.0.0",
-    "draft-js": "^0.10.5",
-    "draft-js-export-html": "^1.3.3",
+    "dotenv": "^8.1.0",
+    "draft-js": "^0.11.1",
+    "draft-js-export-html": "^1.4.1",
     "express": "^4.17.1",
     "express-hbs": "^2.1.2",
-    "formik": "^1.5.7",
+    "formik": "^1.5.8",
     "glob": "^7.1.4",
-    "highcharts": "^7.1.2",
+    "highcharts": "^7.2.0",
     "izitoast": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "memory-cache": "^0.2.0",
     "moment": "^2.24.0",
-    "mongoose": "^5.5.15",
-    "multer": "^1.4.1",
+    "mongoose": "^5.7.3",
+    "multer": "^1.4.2",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "query-string": "^6.7.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-intl": "^2.9.0",
-    "react-redux": "^7.0.3",
-    "react-router-dom": "^5.0.1",
-    "redux": "^4.0.1",
+    "query-string": "^6.8.3",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-intl": "^3.3.2",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
-    "redux-promise-middleware": "^6.1.0",
+    "redux-promise-middleware": "^6.1.1",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.87.1",
-    "validator": "^11.0.0",
+    "semantic-ui-react": "^0.88.1",
+    "validator": "^11.1.0",
     "yup": "^0.27.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/core": "^7.6.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-react-html-attrs": "^2.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "coveralls": "^3.0.4",
-    "css-loader": "^2.1.1",
+    "coveralls": "^3.0.6",
+    "css-loader": "^3.2.0",
     "faker": "^4.1.0",
     "gulp": "^4.0.2",
     "gulp-jasmine": "^4.0.0",
-    "gulp-load-plugins": "^1.6.0",
+    "gulp-load-plugins": "^2.0.1",
     "gulp-nodemon": "^2.4.2",
     "istanbul": "^0.4.5",
     "jasmine-spec-reporter": "^4.2.1",
-    "mini-css-extract-plugin": "^0.7.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "mini-css-extract-plugin": "^0.8.0",
+    "nyc": "^14.1.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "supertest": "^4.0.2",
-    "terser-webpack-plugin": "^1.3.0",
-    "url-loader": "^2.0.0",
-    "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.2",
-    "webpack-merge": "^4.2.1",
+    "terser-webpack-plugin": "^2.1.2",
+    "url-loader": "^2.2.0",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-merge": "^4.2.2",
     "webpack-stream": "^5.2.1"
   }
 }
