--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gadget-catalog",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "A react application for cataloging gadgets",
   "author": "Shibbir Ahmed",
   "license": "MIT",
@@ -10,8 +10,8 @@
   "scripts": {
     "start": "gulp",
     "production": "gulp production",
-    "test": "gulp test",
-    "coverage": "istanbul cover node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=jasmine.json",
+    "test": "nyc mocha --timeout 10000 --recursive './server/**/*spec.js'",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "webpack": "webpack --progress --watch --display-error-details --config=app/config/webpack.development"
   },
   "dependencies": {
@@ -64,17 +64,17 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-react-html-attrs": "^2.1.0",
+    "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "coveralls": "^3.0.6",
     "css-loader": "^3.2.0",
     "faker": "^4.1.0",
     "gulp": "^4.0.2",
-    "gulp-jasmine": "^4.0.0",
     "gulp-load-plugins": "^2.0.1",
+    "gulp-mocha": "^7.0.2",
     "gulp-nodemon": "^2.4.2",
-    "istanbul": "^0.4.5",
-    "jasmine-spec-reporter": "^4.2.1",
     "mini-css-extract-plugin": "^0.8.0",
+    "mocha": "^6.2.1",
     "nyc": "^14.1.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "supertest": "^4.0.2",
