--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "draft-js-export-html": "^1.4.1",
     "express": "^4.17.1",
     "express-hbs": "^2.1.2",
+    "fomantic-ui-css": "^2.7.8",
     "formik": "^1.5.8",
     "glob": "^7.1.4",
     "highcharts": "^7.2.0",
@@ -52,7 +53,6 @@
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.1",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1",
     "validator": "^11.1.0",
     "yup": "^0.27.0"
