Add password reset form

--- a/.env.sample
+++ b/.env.sample
@@ -13,3 +13,6 @@ CLOUDINARY_API_KEY=your_cloudinary_api_key
 CLOUDINARY_API_SECRET=your_cloudinary_api_secret
 
 TOKEN_SECRET=application_secret_token
+
+EMAIL_ADDRESS=your_email_address
+EMAIL_PASSWORD=email_address_password
