--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^8.1.0",
     "draft-js": "^0.11.1",
     "draft-js-export-html": "^1.4.1",
+    "email-templates": "^6.0.3",
     "express": "^4.17.1",
     "express-hbs": "^2.1.2",
     "fomantic-ui-css": "^2.7.8",
@@ -38,6 +39,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.7.3",
     "multer": "^1.4.2",
+    "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
