Add unit test for nodemailer

--- a/.env.example
+++ b/.env.example
@@ -15,5 +15,6 @@ CLOUDINARY_API_SECRET=your_cloudinary_api_secret
 
 TOKEN_SECRET=application_secret_token
 
+SMTP_HOST=smtp_server_name
 MAILER_ADDRESS=mailer_email_address
 MAILER_PASSWORD=mailer_email_password
