Upgrade brand-form to functional component

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "license": "MIT",
   "scripts": {
     "start": "run-p webpack:development pm2:development",
-    "pm2:development": "cross-env NODE_ENV=development pm2 start server.js --watch --no-daemon",
+    "pm2:development": "cross-env NODE_ENV=development pm2 start server.js --watch --no-daemon --name gadget-catalog",
     "webpack:development": "cross-env NODE_ENV=development webpack --progress --watch --display-error-details",
-    "pm2:production": "cross-env NODE_ENV=production pm2 start server.js",
+    "pm2:production": "cross-env NODE_ENV=production pm2 start server.js --name gadget-catalog",
     "webpack:production": "cross-env NODE_ENV=production webpack --progress",
     "production": "run-s webpack:production pm2:production",
     "test": "nyc mocha --color --timeout 10000 --recursive './tests/**/*spec.js'",
@@ -36,7 +36,7 @@
     "izitoast": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "mongoose": "^5.9.13",
+    "mongoose": "^5.9.14",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
     "passport": "^0.4.1",
