--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,5 @@ CLOUDINARY_API_SECRET=your_cloudinary_api_secret
 SMTP_HOST=smtp_server_name
 MAILER_ADDRESS=mailer_email_address
 MAILER_PASSWORD=mailer_email_password
+
+SENTRY_DSN=sentry_data_source_name
