--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "production": "run-s webpack:production pm2:production",
     "test": "nyc mocha --color --timeout 10000 --recursive './tests/**/*spec.js'",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "seed": "node seeder.js"
+    "seed": "node seeder.js",
+    "eslint": "eslint src/**"
   },
   "dependencies": {
     "@casl/ability": "^4.1.3",
     "@sentry/browser": "^5.15.5",
     "@sentry/node": "^5.15.5",
+    "apollo-server": "^2.14.1",
     "async": "^3.2.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
@@ -34,6 +36,7 @@
     "fomantic-ui-css": "^2.8.4",
     "formik": "^2.1.4",
     "glob": "^7.1.6",
+    "graphql": "^15.0.0",
     "highcharts": "^8.1.0",
     "izitoast": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
@@ -45,6 +48,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
+    "prop-types": "^15.7.2",
     "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -72,6 +76,8 @@
     "coveralls": "^3.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
+    "eslint": "^7.1.0",
+    "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
     "faker": "^4.1.0",
     "mini-css-extract-plugin": "^0.9.0",
