Migrate category services to graphql

--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   },
   "dependencies": {
     "@casl/ability": "^4.1.5",
-    "@sentry/browser": "^5.17.0",
-    "@sentry/node": "^5.17.0",
-    "apollo-server-express": "^2.14.4",
+    "@sentry/browser": "^5.18.1",
+    "@sentry/node": "^5.18.1",
+    "apollo-server-express": "^2.15.0",
     "async": "^3.2.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
@@ -33,17 +33,17 @@
     "draft-js-export-html": "^1.4.1",
     "express": "^4.17.1",
     "express-hbs": "^2.3.3",
-    "fomantic-ui-css": "^2.8.5",
+    "fomantic-ui-css": "^2.8.6",
     "formik": "^2.1.4",
     "glob": "^7.1.6",
     "graphql": "^15.1.0",
-    "highcharts": "^8.1.1",
+    "highcharts": "^8.1.2",
     "izitoast": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "mongoose": "^5.9.18",
+    "mongoose": "^5.9.20",
     "multer": "^1.4.2",
-    "nodemailer": "^6.4.8",
+    "nodemailer": "^6.4.10",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
@@ -52,7 +52,7 @@
     "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-intl": "^4.6.9",
+    "react-intl": "^4.7.5",
     "react-redux": "^7.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
@@ -65,9 +65,9 @@
     "yup": "^0.29.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.10.1",
-    "@babel/preset-env": "^7.10.2",
+    "@babel/core": "^7.10.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
     "@babel/preset-react": "^7.10.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-lodash": "^3.3.4",
@@ -77,7 +77,7 @@
     "coveralls": "^3.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.6.0",
-    "eslint": "^7.2.0",
+    "eslint": "^7.3.1",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
     "faker": "^4.1.0",
@@ -88,10 +88,14 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "pm2": "^4.4.0",
     "supertest": "^4.0.2",
-    "terser-webpack-plugin": "^3.0.4",
+    "terser-webpack-plugin": "^3.0.6",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
+    "webpack-cli": "^3.3.12",
     "webpack-merge": "^4.2.2"
+  },
+  "resolutions": {
+    "**/**/fs-capacitor":"^6.2.0",
+    "**/graphql-upload": "^11.0.0"
   }
 }
