--- a/package.json
+++ b/package.json
@@ -18,28 +18,29 @@
   },
   "dependencies": {
     "@casl/ability": "^4.1.5",
-    "@sentry/browser": "^5.18.1",
-    "@sentry/node": "^5.18.1",
+    "@sentry/browser": "^5.19.2",
+    "@sentry/node": "^5.19.2",
     "async": "^3.2.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.22.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
-    "date-fns": "^2.14.0",
+    "date-fns": "^2.15.0",
     "dotenv": "^8.2.0",
     "draft-js": "^0.11.6",
     "draft-js-export-html": "^1.4.1",
     "express": "^4.17.1",
     "express-hbs": "^2.3.3",
     "fomantic-ui-css": "^2.8.6",
-    "formik": "^2.1.4",
+    "formik": "^2.1.5",
     "glob": "^7.1.6",
+    "helmet": "^3.23.3",
     "highcharts": "^8.1.2",
     "izitoast": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
-    "mongoose": "^5.9.20",
+    "lodash": "^4.17.19",
+    "mongoose": "^5.9.25",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
     "passport": "^0.4.1",
@@ -50,7 +51,7 @@
     "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-intl": "^4.7.5",
+    "react-intl": "^5.3.2",
     "react-redux": "^7.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
@@ -63,10 +64,10 @@
     "yup": "^0.29.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.10.3",
-    "@babel/preset-env": "^7.10.3",
-    "@babel/preset-react": "^7.10.1",
+    "@babel/core": "^7.10.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-react-html-attrs": "^3.0.4",
@@ -75,9 +76,9 @@
     "coveralls": "^3.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.6.0",
-    "eslint": "^7.3.1",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.4",
+    "eslint": "^7.5.0",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "faker": "^4.1.0",
     "mini-css-extract-plugin": "^0.9.0",
     "mocha": "^8.0.1",
@@ -86,10 +87,10 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "pm2": "^4.4.0",
     "supertest": "^4.0.2",
-    "terser-webpack-plugin": "^3.0.6",
+    "terser-webpack-plugin": "^3.0.7",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^5.0.9"
   }
 }
