--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "gadget-catalog",
-  "version": "0.14.0",
+  "version": "0.15.0",
   "description": "A react application for cataloging gadgets",
   "author": "Shibbir Ahmed",
   "license": "MIT",
   "scripts": {
     "start": "run-p webpack:development pm2:development",
     "pm2:development": "cross-env NODE_ENV=development pm2 start server.js --watch --no-daemon --name gadget-catalog",
-    "webpack:development": "cross-env NODE_ENV=development webpack --progress --watch --display-error-details",
+    "webpack:development": "cross-env NODE_ENV=development webpack --progress --watch --stats-error-details",
     "pm2:production": "cross-env NODE_ENV=production pm2 start server.js --name gadget-catalog",
     "webpack:production": "cross-env NODE_ENV=production webpack --progress",
     "production": "run-s webpack:production pm2:production",
@@ -18,10 +18,10 @@
   },
   "dependencies": {
     "@casl/ability": "^4.1.6",
-    "@sentry/browser": "^5.25.0",
-    "@sentry/node": "^5.25.0",
+    "@sentry/browser": "^5.27.2",
+    "@sentry/node": "^5.27.2",
     "async": "^3.2.0",
-    "axios": "^0.20.0",
+    "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.23.0",
     "compression": "^1.7.4",
@@ -33,41 +33,41 @@
     "express": "^4.17.1",
     "express-hbs": "^2.3.4",
     "fomantic-ui-css": "^2.8.7",
-    "formik": "^2.2.0",
+    "formik": "^2.2.1",
     "glob": "^7.1.6",
-    "helmet": "^4.1.1",
-    "highcharts": "^8.2.0",
+    "helmet": "^4.2.0",
+    "highcharts": "^8.2.2",
     "izitoast": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
-    "mongoose": "^5.10.9",
+    "mongoose": "^5.10.11",
     "multer": "^1.4.2",
-    "nodemailer": "^6.4.13",
+    "nodemailer": "^6.4.14",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "prop-types": "^15.7.2",
-    "query-string": "^6.13.5",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-intl": "^5.8.6",
-    "react-redux": "^7.2.1",
+    "query-string": "^6.13.6",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-intl": "^5.8.8",
+    "react-redux": "^7.2.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^2.0.0",
+    "semantic-ui-react": "^2.0.1",
     "validator": "^13.1.17",
     "yup": "^0.29.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-react-html-attrs": "^3.0.5",
@@ -75,22 +75,22 @@
     "clean-webpack-plugin": "^3.0.0",
     "coveralls": "^3.1.0",
     "cross-env": "^7.0.2",
-    "css-loader": "^4.3.0",
-    "eslint": "^7.11.0",
-    "eslint-plugin-react": "^7.21.4",
-    "eslint-plugin-react-hooks": "^4.1.2",
+    "css-loader": "^5.0.0",
+    "eslint": "^7.12.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "faker": "^5.1.0",
-    "mini-css-extract-plugin": "^1.0.0",
-    "mocha": "^8.1.3",
+    "mini-css-extract-plugin": "^1.2.1",
+    "mocha": "^8.2.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "pm2": "^4.5.0",
-    "supertest": "^5.0.0",
-    "terser-webpack-plugin": "^4.2.3",
+    "supertest": "^6.0.0",
+    "terser-webpack-plugin": "^5.0.3",
     "url-loader": "^4.1.1",
-    "webpack": "4.44.2",
-    "webpack-cli": "3.3.12",
-    "webpack-merge": "^5.2.0"
+    "webpack": "5.3.2",
+    "webpack-cli": "4.1.0",
+    "webpack-merge": "^5.3.0"
   }
 }
