Replace mocha with jest

--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
   "plugins": [
     "lodash",
     "react-html-attrs",
+    "@babel/plugin-transform-runtime",
     "@babel/plugin-proposal-object-rest-spread"
   ]
 }
