--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ MAILER_ADDRESS=mailer_email_address
 MAILER_PASSWORD=mailer_email_password
 
 SENTRY_DSN=sentry_data_source_name
+
+RECAPTCHA_SITE_KEY=recaptcha_site_key
+RECAPTCHA_SECRET_KEY=recaptcha_secret_key
