--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ sudo: false
 branches:
   only: master
 
-after_success: npm run coverage
+after_success: jest --detectOpenHandles --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
