--- a/package.json
+++ b/package.json
@@ -11,22 +11,21 @@
     "pm2:production": "cross-env NODE_ENV=production pm2 start server.js --name gadget-catalog",
     "webpack:production": "cross-env NODE_ENV=production webpack --progress",
     "production": "run-s webpack:production pm2:production",
-    "test": "nyc mocha --color --timeout 10000 --recursive './tests/**/*spec.js'",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "test": "jest --detectOpenHandles --coverage",
     "seed": "node seeder.js",
     "eslint": "eslint src/**"
   },
   "dependencies": {
     "@casl/ability": "^5.2.2",
-    "@sentry/browser": "^6.2.1",
-    "@sentry/node": "^6.2.1",
+    "@sentry/browser": "^6.2.3",
+    "@sentry/node": "^6.2.3",
     "async": "^3.2.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.25.0",
+    "cloudinary": "^1.25.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
-    "date-fns": "^2.18.0",
+    "date-fns": "^2.19.0",
     "dotenv": "^8.2.0",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
@@ -40,7 +39,7 @@
     "izitoast": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^5.11.18",
+    "mongoose": "^5.12.2",
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
@@ -48,12 +47,12 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "prop-types": "^15.7.2",
-    "query-string": "^6.14.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "query-string": "^7.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
-    "react-intl": "^5.13.2",
-    "react-redux": "^7.2.2",
+    "react-intl": "^5.15.3",
+    "react-redux": "^7.2.3",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
@@ -65,33 +64,32 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.8",
+    "@babel/core": "^7.13.14",
     "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
-    "@babel/preset-env": "^7.13.9",
-    "@babel/preset-react": "^7.12.13",
+    "@babel/plugin-transform-runtime": "^7.13.10",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-react-html-attrs": "^3.0.5",
-    "chai": "^4.3.3",
     "clean-webpack-plugin": "^3.0.0",
     "coveralls": "^3.1.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.1.1",
-    "eslint": "^7.21.0",
-    "eslint-plugin-react": "^7.22.0",
+    "css-loader": "^5.2.0",
+    "eslint": "^7.23.0",
+    "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "faker": "^5.4.0",
-    "mini-css-extract-plugin": "^1.3.9",
-    "mocha": "^8.3.0",
+    "faker": "^5.5.1",
+    "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^1.4.0",
     "npm-run-all": "^4.1.5",
-    "nyc": "^15.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "pm2": "^4.5.5",
     "supertest": "^6.1.3",
     "terser-webpack-plugin": "^5.1.1",
     "url-loader": "^4.1.1",
-    "webpack": "5.24.3",
-    "webpack-cli": "4.5.0",
+    "webpack": "5.28.0",
+    "webpack-cli": "4.6.0",
     "webpack-merge": "^5.7.3"
   }
 }
