WIP: React router upgrade

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,13 @@ uploads
 .idea
 .vscode
 .scannerwork
+
+# Yarn
+# =======
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
