--- a/package.json
+++ b/package.json
@@ -16,80 +16,80 @@
     "eslint": "eslint src/**"
   },
   "dependencies": {
-    "@casl/ability": "^5.2.2",
-    "@sentry/browser": "^6.2.3",
-    "@sentry/node": "^6.2.3",
-    "async": "^3.2.0",
-    "axios": "^0.21.1",
+    "@casl/ability": "^5.4.3",
+    "@sentry/browser": "^6.18.1",
+    "@sentry/node": "^6.18.1",
+    "async": "^3.2.3",
+    "axios": "^0.26.0",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.25.1",
+    "cloudinary": "^1.28.1",
     "compression": "^1.7.4",
-    "cookie-parser": "^1.4.5",
-    "date-fns": "^2.19.0",
-    "dotenv": "^8.2.0",
+    "cookie-parser": "^1.4.6",
+    "date-fns": "^2.28.0",
+    "dotenv": "^16.0.0",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
-    "express": "^4.17.1",
-    "express-hbs": "^2.3.4",
-    "fomantic-ui-css": "^2.8.7",
-    "formik": "^2.2.6",
-    "glob": "^7.1.6",
-    "helmet": "^4.4.1",
-    "highcharts": "^9.0.1",
+    "express": "^4.17.3",
+    "express-hbs": "^2.4.0",
+    "fomantic-ui-css": "^2.8.8",
+    "formik": "^2.2.9",
+    "glob": "^7.2.0",
+    "helmet": "^5.0.2",
+    "highcharts": "^9.3.3",
     "izitoast": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^5.12.2",
-    "multer": "^1.4.2",
-    "nodemailer": "^6.5.0",
-    "passport": "^0.4.1",
+    "mongoose": "^6.2.4",
+    "multer": "^1.4.4",
+    "nodemailer": "^6.7.2",
+    "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
-    "prop-types": "^15.7.2",
-    "query-string": "^7.0.0",
+    "prop-types": "^15.8.1",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
-    "react-intl": "^5.15.3",
-    "react-redux": "^7.2.3",
-    "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
+    "react-intl": "^5.24.6",
+    "react-redux": "^7.2.6",
+    "react-router-bootstrap": "^0.26.0",
+    "react-router-dom": "^6.2.2",
+    "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.2",
-    "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^2.0.3",
-    "validator": "^13.5.2",
-    "yup": "^0.32.9"
+    "redux-thunk": "^2.4.1",
+    "semantic-ui-react": "^2.1.2",
+    "validator": "^13.7.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.14",
-    "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
-    "@babel/plugin-transform-runtime": "^7.13.10",
-    "@babel/preset-env": "^7.13.12",
-    "@babel/preset-react": "^7.13.13",
-    "babel-loader": "^8.2.2",
+    "@babel/core": "^7.17.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.17.3",
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "babel-loader": "^8.2.3",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-react-html-attrs": "^3.0.5",
-    "clean-webpack-plugin": "^3.0.0",
-    "coveralls": "^3.1.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.2.0",
-    "eslint": "^7.23.0",
-    "eslint-plugin-react": "^7.23.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "faker": "^5.5.1",
-    "jest": "^26.6.3",
-    "mini-css-extract-plugin": "^1.4.0",
+    "css-loader": "^6.7.0",
+    "eslint": "^8.10.0",
+    "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "faker": "5.5.3",
+    "jest": "^27.5.1",
+    "mini-css-extract-plugin": "^2.6.0",
     "npm-run-all": "^4.1.5",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "pm2": "^4.5.5",
-    "supertest": "^6.1.3",
-    "terser-webpack-plugin": "^5.1.1",
-    "url-loader": "^4.1.1",
-    "webpack": "5.28.0",
-    "webpack-cli": "4.6.0",
-    "webpack-merge": "^5.7.3"
-  }
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "pm2": "^5.2.0",
+    "supertest": "^6.2.2",
+    "terser-webpack-plugin": "^5.3.1",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-merge": "^5.8.0"
+  },
+  "packageManager": "yarn@3.2.0"
 }
