Remove travis-ci integration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,16 @@
 version: 2.1
 orbs:
-  node: circleci/node@5.0.2
+  node: circleci/node@5.1.0
+  coveralls: coveralls/coveralls@2.2.1
 jobs:
-  build-and-test:
-    executor:
-      name: node/default
+  build_and_test:
+    executor: node/default
     steps:
       - checkout
       - node/install-packages:
           pkg-manager: yarn
       - run:
-          command: yarn install
-          name: Install dependencies
-      - run:
           command: yarn test
           name: Run tests
-workflows:
-    build-and-test:
-      jobs:
-        - build-and-test
+      - coveralls/upload
+workflows: null
