--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,10 +19,11 @@ jobs:
         node-version: [20.x]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
     - run: yarn --frozen-lockfile
     - run: yarn production
+    - run: yarn test
