Replace draft.js with TinyMCE

--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,26 @@
-PORT=port_for_express_server
-MONGODB_URI=mongodb_connection_uri
+PORT=<value>
+MONGODB_URI=<value>
 
-TOKEN_SECRET=access_token_secret
-REFRESH_SECRET=refresh_token_secret
+TOKEN_SECRET=<value>
+REFRESH_SECRET=<value>
 
-GOOGLE_CLIENT_ID=google_client_id
-GOOGLE_CLIENT_SECRET=google_client_secret
+GOOGLE_CLIENT_ID=<value>
+GOOGLE_CLIENT_SECRET=<value>
 
-FACEBOOK_CLIENT_ID=facebook_client_id
-FACEBOOK_CLIENT_SECRET=facebook_client_secret
+FACEBOOK_CLIENT_ID=<value>
+FACEBOOK_CLIENT_SECRET=<value>
 
-CLOUDINARY_CLOUD_NAME=your_cloudinary_name
-CLOUDINARY_API_KEY=your_cloudinary_api_key
-CLOUDINARY_API_SECRET=your_cloudinary_api_secret
+CLOUDINARY_CLOUD_NAME=<value>
+CLOUDINARY_API_KEY=<value>
+CLOUDINARY_API_SECRET=<value>
 
-SMTP_HOST=smtp_server_name
-MAILER_ADDRESS=mailer_email_address
-MAILER_PASSWORD=mailer_email_password
+SMTP_HOST=<value>
+MAILER_ADDRESS=<value>
+MAILER_PASSWORD=<value>
 
-SENTRY_DSN=sentry_data_source_name
+SENTRY_DSN=<value>
 
-RECAPTCHA_SITE_KEY=recaptcha_site_key
-RECAPTCHA_SECRET_KEY=recaptcha_secret_key
+RECAPTCHA_SITE_KEY=<value>
+RECAPTCHA_SECRET_KEY=<value>
+
+TINYCLOUD_API_KEY=<value>
