--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@casl/ability": "^6.1.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@sentry/node": "^7.69.0",
+    "@tinymce/tinymce-react": "^4.3.0",
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.40.0",
@@ -27,8 +28,6 @@
     "cookie-signature": "^1.2.1",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
-    "draft-js": "^0.11.7",
-    "draft-js-export-html": "^1.4.1",
     "express": "^4.18.2",
     "express-hbs": "^2.4.2",
     "fomantic-ui-css": "^2.9.3",
